Feature/new card in list (#24)
* hello world

* add first domain entity and first test

* add project title in Project, with NotEmptyString and string validator and tests

* add github action for maven test

* reverse wrong meaning of isEmpty

* add the command CreateNewProject

* create handler classes

* create commandBus interface

* add simple commandBus implementation

* fill the handle of the createNewProjectHandler

* add test for createNewProjectHandler

* change test store

* add picocli dependency for CLI

* add test command Hello

* shade the package to have picocli dependency

* create first command line new project callable

$ java -cp target/touffu-management-0.1.0-shaded.jar cat.touffu.management.Cli new-project {title}

* wip for Dependecy Injection with Guice

* add in memory repository for project and inject commandBus via a module class

* add sqlite database with project repository impl

* possibility to add a list and link it to a project in database

* refacto name of class and remove debug sout

* remove incorect feature folder

* change features to components and create_new_project to CreateNewProject

* add event and eventBus

* move class.for into definition of Sqlite connection

* add list of CardListIds in project

* wip on add domain event ListOfCardCreated

* event is working

* fix tests

* fix merge

* rename stuff in List component and fix remaining merge errors

* add domain of cards, and command CreateCardInList

* optimize imports

* add CarsModule

* add event CardCreationDone with listener in list component

* implement save in SqliteCardRepository, refacto SqliteListRepo

* add cli command for new card

* optimize imports

* add missing sql to List Repository

* add json adapter instead of method in entities

* add verification of project exists when create a list in project

* remove warnings of illegal-access=permit for the tests by passing jv