@@ -80,7 +80,13 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
-                    <argLine>--illegal-access=permit</argLine>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/sun.security.x509=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/sun.security.util=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.desktop/sun.awt.X11=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -88,9 +94,13 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.desktop/sun.awt.image=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/sun.security.x509=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/sun.security.util=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.desktop/sun.awt.X11=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
